Cast Overlay: show the overlay if the video element is interacted with.

The overlay should show when the video is tapped or interacted with.

Bug: 785322
Change-Id: I9ac249005cf08723c35fc6885070c7ec90234aae