third_party/WebKit/Source/modules/media_controls/elements/MediaControlOverlayEnclosureElement.h
@@ -10,7 +10,6 @@
 namespace blink {
 
 class Event;
-class EventDispatchHandlingState;
 class MediaControlsImpl;
 
 class MediaControlOverlayEnclosureElement final
@@ -18,8 +17,9 @@ class MediaControlOverlayEnclosureElement final
  public:
   explicit MediaControlOverlayEnclosureElement(MediaControlsImpl&);
 
+  void DefaultEventHandler(Event*) override;
+
  private:
-  EventDispatchHandlingState* PreDispatchEventHandler(Event*) override;
 };
 
 }  // namespace blink
